# grss

./: CMakeLists.txt  README.md  sources.txt
include/: events.h  feed.h  helpers.h  main.h  window_ui.h
src/: events.cc  feed.cc  helpers.cc  main.c  main.cc  window_ui.cc
